tests/baselines/reference/duplicateIdentifiersAcrossContainerBoundaries.errors.txt
==== tests/cases/compiler/duplicateIdentifiersAcrossContainerBoundaries.ts (4 errors) ====
    module M {
        export interface I { }
    }
    module M {
        export class I { } // error
                     ~
!!! duplicateIdentifiersAcrossContainerBoundaries.ts(5,18): error TS2000: Duplicate identifier 'I'. Additional locations:
!!! 	duplicateIdentifiersAcrossContainerBoundaries.ts(2,5)
    }
    
    module M {
        export function f() { }
    }
    module M {
        export class f { } // error
                     ~
!!! duplicateIdentifiersAcrossContainerBoundaries.ts(12,18): error TS2000: Duplicate identifier 'f'. Additional locations:
!!! 	duplicateIdentifiersAcrossContainerBoundaries.ts(9,5)
    }
    
    module M {
        function g() { }
    }
    module M {
        export class g { } // no error
    }
    
    module M {
        export class C { }
    }
    module M {
        function C() { } // no error
    }
    
    module M {
        export var v = 3;
    }
    module M {
        export var v = 3; // error for redeclaring var in a different parent
                   ~
!!! duplicateIdentifiersAcrossContainerBoundaries.ts(33,16): error TS2000: Duplicate identifier 'v'. Additional locations:
!!! 	duplicateIdentifiersAcrossContainerBoundaries.ts(30,16)
    }
    
    class Foo {
        static x: number;
    }
    
    module Foo {
        export var x: number; // error for redeclaring var in a different parent
                   ~
!!! duplicateIdentifiersAcrossContainerBoundaries.ts(41,16): error TS2000: Duplicate identifier 'x'. Additional locations:
!!! 	duplicateIdentifiersAcrossContainerBoundaries.ts(37,5)
    }
    
    module N {
        export module F {
            var t;
        }
    }
    declare module N {
        export function F(); // no error because function is ambient
    }
    